<resources>
    <string name="app_name">Chu浏览器</string>
    <string name="app_name_short">Chu</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="save">保存</string>
    <string name="close">关闭</string>
    <string name="back">返回</string>
    <string name="forward">前进</string>
    <string name="refresh">刷新</string>
    <string name="stop">停止</string>
    <string name="search">搜索</string>
    <string name="settings">设置</string>
    <string name="loading">加载中…</string>
    <string name="error">错误</string>
    <string name="success">成功</string>
    <string name="failed">失败</string>
    <string name="empty">暂无数据</string>
    <string name="confirm">确认</string>
    <string name="dismiss">忽略</string>
    <string name="retry">重试</string>
    <string name="copy">复制</string>
    <string name="copied">已复制</string>
    <string name="paste">粘贴</string>
    <string name="share">分享</string>
    <string name="open">打开</string>
    <string name="more">更多</string>
    <string name="all">全部</string>
    <string name="none">无</string>
    <string name="default_value">默认</string>
    <string name="custom">自定义</string>
    <string name="enabled">已启用</string>
    <string name="disabled">已禁用</string>
    <string name="enable">启用</string>
    <string name="disable">禁用</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="address_bar_hint">搜索或输入网址</string>
    <string name="new_tab">新标签页</string>
    <string name="close_tab">关闭标签页</string>
    <string name="close_all_tabs">关闭所有标签页</string>
    <string name="tabs">标签页</string>
    <string name="tab_count">%1$d 个标签页</string>
    <string name="home">主页</string>
    <string name="bookmarks">书签</string>
    <string name="history">历史记录</string>
    <string name="downloads">下载</string>
    <string name="share_page">分享页面</string>
    <string name="find_in_page">页面内查找</string>
    <string name="add_bookmark">添加书签</string>
    <string name="bookmark_added">已添加书签</string>
    <string name="bookmark_exists">书签已存在</string>
    <string name="desktop_site">桌面版网站</string>
    <string name="print">打印</string>
    <string name="translate">翻译</string>
    <string name="read_mode">阅读模式</string>
    <string name="fullscreen">全屏</string>
    <string name="exit_fullscreen">退出全屏</string>
    <string name="page_info">页面信息</string>
    <string name="site_settings">网站设置</string>
    <string name="report_issue">反馈问题</string>
    <string name="quit">退出</string>
    <string name="ad_block">广告拦截</string>
    <string name="ad_block_enabled">广告拦截已启用</string>
    <string name="ad_block_disabled">广告拦截已禁用</string>
    <string name="ad_block_count">已拦截 %1$d 个广告</string>
    <string name="ad_block_settings">广告拦截设置</string>
    <string name="ad_block_list">广告拦截规则</string>
    <string name="update_filters">更新过滤规则</string>
    <string name="whitelist">白名单</string>
    <string name="add_to_whitelist">添加到白名单</string>
    <string name="remove_from_whitelist">从白名单移除</string>
    <string name="security">安全</string>
    <string name="security_check">安全检测</string>
    <string name="security_checking">正在安全检测…</string>
    <string name="security_safe">网站安全</string>
    <string name="security_warning">网站存在风险</string>
    <string name="security_danger">网站危险，已拦截</string>
    <string name="security_unknown">未知安全状态</string>
    <string name="malware_detected">检测到恶意软件</string>
    <string name="phishing_detected">检测到钓鱼网站</string>
    <string name="insecure_connection">不安全的连接</string>
    <string name="ssl_error">SSL证书错误</string>
    <string name="proceed_anyway">仍然继续</string>
    <string name="go_back">返回安全</string>
    <string name="security_report">安全报告</string>
    <string name="web_detector">网页检测拦截器</string>
    <string name="web_detector_enabled">网页检测已启用</string>
    <string name="password_manager">密码管理器</string>
    <string name="save_password">保存密码</string>
    <string name="password_saved">密码已保存</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="website">网站</string>
    <string name="generate_password">生成强密码</string>
    <string name="strong_password">强密码</string>
    <string name="password_length">密码长度</string>
    <string name="include_uppercase">包含大写字母</string>
    <string name="include_lowercase">包含小写字母</string>
    <string name="include_numbers">包含数字</string>
    <string name="include_symbols">包含符号</string>
    <string name="auto_fill">自动填充</string>
    <string name="auto_fill_enabled">自动填充已启用</string>
    <string name="delete_password">删除密码</string>
    <string name="edit_password">编辑密码</string>
    <string name="view_password">查看密码</string>
    <string name="hide_password">隐藏密码</string>
    <string name="password_strength">密码强度</string>
    <string name="password_weak">弱</string>
    <string name="password_medium">中</string>
    <string name="password_strong">强</string>
    <string name="password_very_strong">非常强</string>
    <string name="no_saved_passwords">暂无保存的密码</string>
    <string name="search_passwords">搜索密码</string>
    <string name="unlock_passwords">解锁密码管理器</string>
    <string name="master_password">主密码</string>
    <string name="confirm_master_password">确认主密码</string>
    <string name="set_master_password">设置主密码</string>
    <string name="change_master_password">修改主密码</string>
    <string name="wrong_master_password">主密码错误</string>
    <string name="captcha_detected">检测到验证码</string>
    <string name="captcha_recognizing">正在识别验证码…</string>
    <string name="captcha_recognized">验证码识别完成</string>
    <string name="captcha_failed">验证码识别失败</string>
    <string name="captcha_auto_fill">自动填充验证码</string>
    <string name="captcha_code">验证码：%1$s</string>
    <string name="certificate_info">证书信息</string>
    <string name="certificate_valid">证书有效</string>
    <string name="certificate_invalid">证书无效</string>
    <string name="certificate_expired">证书已过期</string>
    <string name="issuer">颁发者</string>
    <string name="subject">主体</string>
    <string name="valid_from">生效时间</string>
    <string name="valid_to">到期时间</string>
    <string name="serial_number">序列号</string>
    <string name="signature_algorithm">签名算法</string>
    <string name="public_key">公钥</string>
    <string name="fingerprint">指纹</string>
    <string name="sha256_fingerprint">SHA-256 指纹</string>
    <string name="sha1_fingerprint">SHA-1 指纹</string>
    <string name="certificate_details">证书详情</string>
    <string name="cookie_manager">Cookie管理</string>
    <string name="cookies">Cookie</string>
    <string name="cookie_name">名称</string>
    <string name="cookie_value">值</string>
    <string name="cookie_domain">域名</string>
    <string name="cookie_path">路径</string>
    <string name="cookie_expires">过期时间</string>
    <string name="cookie_secure">安全</string>
    <string name="cookie_http_only">仅HTTP</string>
    <string name="cookie_same_site">SameSite</string>
    <string name="delete_cookie">删除Cookie</string>
    <string name="delete_all_cookies">删除所有Cookie</string>
    <string name="block_third_party_cookies">阻止第三方Cookie</string>
    <string name="accept_cookies">接受Cookie</string>
    <string name="no_cookies">该网站没有Cookie</string>
    <string name="developer_tools">开发者工具</string>
    <string name="dev_tools_enabled">开发者工具已启用</string>
    <string name="inspect_element">检查元素</string>
    <string name="console">控制台</string>
    <string name="network">网络</string>
    <string name="sources">源代码</string>
    <string name="performance">性能</string>
    <string name="application">应用</string>
    <string name="security_tab">安全</string>
    <string name="remote_debugging">远程调试</string>
    <string name="user_agent">User-Agent</string>
    <string name="clear_cache">清除缓存</string>
    <string name="cache_cleared">缓存已清除</string>
    <string name="view_source">查看源代码</string>
    <string name="javascript_console">JavaScript控制台</string>
    <string name="execute_js">执行JavaScript</string>
    <string name="js_result">执行结果</string>
    <string name="privacy">隐私</string>
    <string name="privacy_mode">隐私模式</string>
    <string name="privacy_space">隐私隔离空间</string>
    <string name="privacy_isolation">隐私隔离</string>
    <string name="privacy_isolation_enabled">隐私隔离已启用</string>
    <string name="new_privacy_space">新建隐私空间</string>
    <string name="privacy_space_name">隐私空间名称</string>
    <string name="delete_privacy_space">删除隐私空间</string>
    <string name="privacy_space_locked">隐私空间已锁定</string>
    <string name="unlock_privacy_space">解锁隐私空间</string>
    <string name="do_not_track">请勿跟踪</string>
    <string name="block_trackers">阻止跟踪器</string>
    <string name="clear_browsing_data">清除浏览数据</string>
    <string name="clear_history">清除历史记录</string>
    <string name="clear_cache_data">清除缓存</string>
    <string name="clear_cookies_data">清除Cookie</string>
    <string name="clear_passwords">清除已保存密码</string>
    <string name="clear_bookmarks">清除书签</string>
    <string name="clear_all">全部清除</string>
    <string name="data_cleared">数据已清除</string>
    <string name="fingerprint_protection">指纹保护</string>
    <string name="webrtc_leak_protection">WebRTC泄漏保护</string>
    <string name="block_popups">阻止弹窗</string>
    <string name="download">下载</string>
    <string name="downloading">正在下载</string>
    <string name="download_paused">下载已暂停</string>
    <string name="download_completed">下载完成</string>
    <string name="download_failed">下载失败</string>
    <string name="download_canceled">下载已取消</string>
    <string name="download_confirm">确认下载</string>
    <string name="download_confirm_message">是否下载 %1$s？\n大小：%2$s</string>
    <string name="download_progress">下载进度：%1$d%%</string>
    <string name="download_speed">下载速度：%1$s/s</string>
    <string name="download_size">文件大小：%1$s</string>
    <string name="download_remaining">剩余时间：%1$s</string>
    <string name="pause_download">暂停下载</string>
    <string name="resume_download">继续下载</string>
    <string name="cancel_download">取消下载</string>
    <string name="retry_download">重新下载</string>
    <string name="open_file">打开文件</string>
    <string name="open_folder">打开文件夹</string>
    <string name="delete_download">删除下载</string>
    <string name="download_location">下载位置</string>
    <string name="no_downloads">暂无下载记录</string>
    <string name="download_notification_title">正在下载：%1$s</string>
    <string name="general_settings">通用设置</string>
    <string name="search_engine">默认搜索引擎</string>
    <string name="search_engine_bing">Bing</string>
    <string name="search_engine_google">Google</string>
    <string name="search_engine_baidu">百度</string>
    <string name="search_engine_duckduckgo">DuckDuckGo</string>
    <string name="search_engine_yahoo">Yahoo</string>
    <string name="search_engine_custom">自定义</string>
    <string name="homepage">主页</string>
    <string name="homepage_default">默认主页</string>
    <string name="homepage_custom">自定义主页</string>
    <string name="homepage_blank">空白页</string>
    <string name="theme">主题</string>
    <string name="theme_light">浅色</string>
    <string name="theme_dark">深色</string>
    <string name="theme_system">跟随系统</string>
    <string name="font_size">字体大小</string>
    <string name="menu_back">返回</string>
    <string name="menu_bookmarks">书签</string>
    <string name="menu_new_tab">新建标签页</string>
    <string name="menu_history">历史记录</string>
    <string name="menu_downloads">下载</string>
    <string name="menu_passwords">密码</string>
    <string name="menu_settings">设置</string>
    <string name="menu_share">分享</string>
    <string name="menu_certificate">证书信息</string>
    <string name="menu_devtools">开发者工具</string>
    <string name="empty_downloads">暂无下载</string>
    <string name="menu_add_bookmark">添加书签</string>
    <string name="menu_forward">前进</string>
    <string name="menu_privacy_mode">隐私模式</string>
    <string name="menu_refresh">刷新</string>
    <string name="menu_tabs">标签页</string>
    <string name="search_hint">搜索或输入网址</string>
</resources>