<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_new_tab" android:title="@string/menu_new_tab" />
    <item android:id="@+id/action_bookmarks" android:title="@string/menu_bookmarks" />
    <item android:id="@+id/action_history" android:title="@string/menu_history" />
    <item android:id="@+id/action_downloads" android:title="@string/menu_downloads" />
    <item android:id="@+id/action_passwords" android:title="@string/menu_passwords" />
    <item android:id="@+id/action_privacy" android:title="@string/menu_privacy_mode" />
    <item android:id="@+id/action_certificate" android:title="@string/menu_certificate" />
    <item android:id="@+id/action_cookies" android:title="@string/menu_cookies" />
    <item android:id="@+id/action_devtools" android:title="@string/menu_devtools" />
    <item android:id="@+id/action_share" android:title="@string/menu_share" />
    <item android:id="@+id/action_settings" android:title="@string/menu_settings" />
</menu>
